JBCL-64: use the file protocol to create codesource
git-svn-id: http://anonsvn.jboss.org/repos/jbossas/projects/jboss-cl/trunk@80682 84be2c1e-ba19-0410-b317-a758671a6fc1